add resolve bug
